Fix knob alignment

--- a/src/css/imports/slider.less
+++ b/src/css/imports/slider.less
@@ -42,6 +42,7 @@
 .jw-knob {
     background-color: @active-color;
     width: @thumb-size;
+    height: @thumb-size;
 }
 
 .jw-slider-horizontal {
@@ -56,7 +57,7 @@
     }
 
     .jw-knob {
-        top: (@rail-height - @thumb-size)/2;
+        top: (@rail-height - @thumb-size) / 2;
         margin-left: @thumb-size / -2;
     }
 }
@@ -85,7 +86,7 @@
 
     .jw-knob {
         right: 0;
-        //width: @def-rail-width;
+        //margin: 0 auto;
         left: (@def-rail-width - @thumb-size) / 2;
     }
 }
