--- a/src/css/imports/vars.less
+++ b/src/css/imports/vars.less
@@ -47,7 +47,7 @@
 @time-rail-width: @def-rail-width;
 @volume-rail-width: @def-rail-width;
 @volume-rail-length: 4em;
-@thumb-size: @rail-height * 1.25;
+@thumb-size: @rail-height * 2;
 
 // Volume tooltip
 @volume-background: @background-color;
