--- a/src/css/skins/seven.less
+++ b/src/css/skins/seven.less
@@ -33,18 +33,18 @@
   }
 
   .jw-knob {
-    height: @thumb-size * 1.3;
-    width: @thumb-size * 1.3;
+    //height: @thumb-size;
+    //width: @thumb-size * 1.3;
     border-radius: @thumb-size;
   }
 
   .jw-slider-horizontal .jw-knob {
-    .vertically-centered-rail-element(@rail-height, @thumb-size * 1.3);
+    //.vertically-centered-rail-element(@rail-height, @thumb-size * 1.3);
   }
 
-  .jw-slider-vertical .jw-knob {
-    .horizontally-centered-rail-element(@rail-height, @thumb-size * 1.3);
-  }
+  //.jw-slider-vertical .jw-knob {
+  //  .horizontally-centered-rail-element(@rail-height, @thumb-size * 1.3);
+  //}
 
   .jw-volume-tip {
     padding: 0.5em;
